# turtlebot_scripts

./: CMakeLists.txt  README.md  deepsort.py  package.xml
src/: print_odom.py  turtlebot_change_orientation.py  turtlebot_move.py  turtlebot_move_capstone.py  turtlebot_position.py  turtlebot_rotate.py  turtlesim_move.py  turtlesim_move_1.py  turtlesim_move_go_to_goal.py  turtlesim_position.py
